# The Mia! Accounting Project.
# Author: imacat@mail.imacat.idv.tw (imacat), 2022/8/21

#  Copyright (c) 2022-2023 imacat.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[project]
name = "mia-accounting"
version = "1.0.1"
description = "A Flask accounting module."
readme = "README.rst"
requires-python = ">=3.11"
authors = [
    {name = "imacat", email = "imacat@mail.imacat.idv.tw"},
]
keywords = ["mia", "accounting", "flask"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "flask",
    "Flask-SQLAlchemy",
    "Flask-WTF",
    "Flask-Babel >= 3",
    "Flask-Babel-JS",
]

[project.optional-dependencies]
test = [
    "unittest",
    "httpx",
    "OpenCC",
]

[project.urls]
"Documentation" = "https://mia-accounting.readthedocs.io"
"Repository" = "https://github.com/imacat/mia-accounting"
"Bug Tracker" = "https://github.com/imacat/mia-accounting/issues"
"Demonstration" = "https://accounting.imacat.idv.tw"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.exclude-package-data]
"*" = [
    "babel.cfg",
    "*.pot",
    "*.po",
]
