# The Mia! Flask Project.
# Author: imacat@mail.imacat.idv.tw (imacat), 2022/8/21

#  Copyright (c) 2022-2023 imacat.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[metadata]
name = mia-accounting-flask
version = 0.4.0
author = imacat
author_email = imacat@mail.imacat.idv.tw
description = The Mia! Accounting Flask project.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/imacat/mia-accounting-flask
project_urls =
    Bug Tracker = https://github.com/imacat/mia-accounting-flask/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Framework :: Flask
    Topic :: Office/Business :: Financial :: Accounting

[options]
package_dir =
    = src
python_requires = >=3.11
install_requires =
  flask
  Flask-SQLAlchemy
  Flask-WTF
  Flask-Babel >= 3
  Flask-Babel-JS
tests_require =
  unittest
  httpx
  OpenCC

[options.package_data]
accounting =
  static/**
  templates/**
  translations/*/LC_MESSAGES/*.mo
  data/**
